--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -1,8 +1,6 @@
 name: CI + Docker
 
-on:
-  push:
-    branches: ["main", "master"]
+on: [push]
 
 permissions:
   contents: read
@@ -13,14 +11,12 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  test:
+  backend:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Java 21
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "21"
@@ -28,48 +24,41 @@ jobs:
 
       - name: Run backend tests
         run: mvn -B clean test
+        working-directory: demo
 
   frontend:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node 20
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: npm
           cache-dependency-path: frontend/package-lock.json
 
-      - name: Install deps
-        run: npm ci
+      - run: npm ci
         working-directory: frontend
 
-      - name: Run frontend tests
-        run: npm test --if-present
+      - run: npm test --if-present
         working-directory: frontend
 
-      - name: Build frontend
-        run: npm run build
+      - run: npm run build
         working-directory: frontend
 
   docker:
     runs-on: ubuntu-latest
-    needs: [test, frontend]
+    needs: [backend, frontend]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract Docker metadata (tags/labels)
-        id: meta
+      - id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -80,27 +69,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: demo
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Run container (smoke test)
-        run: |
-          IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${{ github.sha }}"
-          docker run -d --name gematria -p 8080:8080 "$IMAGE"
-          for i in {1..30}; do
-            if curl -fsS http://localhost:8080/actuator/health >/dev/null 2>&1; then
-              echo "App is healthy"
-              exit 0
-            fi
-            sleep 2
-          done
-          echo "Healthcheck failed"
-          docker logs gematria
-          exit 1
-
-      - name: Cleanup
-        if: always()
-        run: |
-          docker rm -f gematria || true
