--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -14,51 +14,98 @@ jobs:
   backend:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+      - name: Setup Java 21
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "21"
           cache: maven
 
+      # Contournement possible du 403 Maven Central (repo.maven.apache.org)
+      - name: Configure Maven mirror (repo1.maven.org)
+        run: |
+          mkdir -p ~/.m2
+          cat > ~/.m2/settings.xml <<'XML'
+          <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd">
+            <mirrors>
+              <mirror>
+                <id>central-repo1</id>
+                <mirrorOf>central</mirrorOf>
+                <url>https://repo1.maven.org/maven2/</url>
+              </mirror>
+            </mirrors>
+          </settings>
+          XML
+
       - name: Run backend tests
-        run: mvn -B clean test
+        run: mvn -s ~/.m2/settings.xml -B clean test
         working-directory: demo
+
+      # Construit le jar (utile pour docker si Dockerfile runtime-only)
+      - name: Package backend jar (skip tests)
+        run: mvn -s ~/.m2/settings.xml -B -DskipTests package
+        working-directory: demo
+
+      # Upload du jar comme artifact pour le job docker (optionnel mais pratique)
+      - name: Upload jar artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-jar
+          path: demo/target/*.jar
 
   frontend:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node 20
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: npm
           cache-dependency-path: frontend/package-lock.json
 
-      - run: npm ci
+      - name: Install deps
+        run: npm ci
         working-directory: frontend
 
-      - run: npm test --if-present
+      - name: Run frontend tests (if present)
+        run: npm test --if-present
         working-directory: frontend
 
-      - run: npm run build
+      - name: Build frontend
+        run: npm run build
         working-directory: frontend
 
   docker:
     runs-on: ubuntu-latest
     needs: [backend, frontend]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: docker/login-action@v3
+      # Récupère le jar construit dans le job backend (si tu utilises upload-artifact)
+      - name: Download jar artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: backend-jar
+          path: demo/target
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - id: meta
+      - name: Extract Docker metadata (tags/labels)
+        id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -66,10 +113,35 @@ jobs:
             type=sha
             type=raw,value=latest
 
-      - name: Build and push
+      - name: Build and push image
         uses: docker/build-push-action@v6
         with:
           context: demo
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      # Smoke test : le conteneur ne reste PAS après le job (runner jetable)
+      - name: Run container (smoke test)
+        run: |
+          IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${{ github.sha }}"
+          docker run -d --name gematria -p 8080:8080 "$IMAGE"
+
+          # attend le démarrage (30 essais x 2s = ~60s)
+          for i in {1..30}; do
+            # Si tu n'as pas actuator, remplace par un endpoint existant de ton API.
+            if curl -fsS http://localhost:8080/actuator/health >/dev/null 2>&1; then
+              echo "App is healthy"
+              exit 0
+            fi
+            sleep 2
+          done
+
+          echo "Healthcheck failed"
+          docker logs gematria
+          exit 1
+
+      - name: Cleanup
+        if: always()
+        run: |
+          docker rm -f gematria || true
