--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -8,6 +8,6 @@ RUN mvn -B -DskipTests clean package
 # --- runtime stage ---
 FROM eclipse-temurin:21-jre
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+COPY target/app.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","/app/app.jar"]
