--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -59,6 +59,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+	  <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+            <mainClass>com.example.gematria.GematriaApplication</mainClass>
+            </configuration>
+     </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
