ajout de tests selenium et maj pipeline

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -41,6 +41,13 @@
       <scope>test</scope>
     </dependency>
 
+	<dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>4.25.0</version>
+        <scope>test</scope>
+    </dependency>
+
     <!-- Tests API (RestAssured) -->
     <dependency>
       <groupId>io.rest-assured</groupId>
@@ -76,4 +83,35 @@
       </plugin>
     </plugins>
   </build>
+
+<profiles>
+  <profile>
+    <id>selenium</id>
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>3.2.5</version>
+          <configuration>
+            <includes>
+              <include>**/*SeleniumIT.java</include>
+            </includes>
+            <systemPropertyVariables>
+              <baseUrl>${baseUrl}</baseUrl>
+            </systemPropertyVariables>
+          </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>integration-test</goal>
+                <goal>verify</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </build>
+  </profile>
+</profiles>
 </project>
